--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,15 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ext-memcached": "^3.2",
+        "cloudinary/cloudinary_php": "^2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-lang/lang": "~10.3",
         "laravel/framework": "^9.19",
@@ -29,7 +34,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
